--- a/api-reference/error-codes.mdx
+++ b/api-reference/error-codes.mdx
@@ -1,8 +1,10 @@
 ---
 title: 'Error Codes'
 icon: 'radiation'
-description: 'Spotflow API helps global merchant collect payments in local currency. Learn how to easily integrate our APIs to streamline your in-app payments.'
+description: Ran into an error? Don't worry—we've got you covered. This page lists all known error codes along with simple explanations and fixes to get you back on track.
+
 ---
+
 ### Spotflow API Response Codes
 
 Spotflow leverages standardized HTTP response codes to consistently communicate the outcome of your API requests. Understanding these codes is essential for interpreting the success or failure of your interactions with the Spotflow platform.
