--- a/expert-desk/test-mode-vs-live-mode.mdx
+++ b/expert-desk/test-mode-vs-live-mode.mdx
@@ -48,7 +48,7 @@ The API Hostnames for both environments is [`app.spotflow.co`](https://api.spotf
 ​
 ## Test Cards
 
-For detailed information on the test cards, test cards, please refer to our comprehensive [Testing Payments](/expert-desk/testing-payments) guide.
+For detailed information on the test cards, please refer to our comprehensive [Testing Payments](/expert-desk/testing-payments) guide.
 
 <Tip>
 Test payment methods are only valid in test mode. Never use them for real payments.
