--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,96 +1,52 @@
 ---
-title: "Quick Start Guide"
-description: "Get up and running with Spotflow in under 10 minutes. Follow our step-by-step guide to set up your account and start processing payments."
+title: "Introduction"
+description: "Welcome to Spotflow, the Merchant of Record (MOR) that simplifies global payments. We handle the entire end-to-end lifecycle for your business—from managing transactions and compliance to ensuring timely payouts."
 icon: "rocket"
 ---
-<Frame>
-  <iframe 
-      className="w-full aspect-video rounded-md" 
-      src="https://www.youtube.com/embed/zE6jtNeW"
-      title="Setup Your Account | Spotflow"
-      frameBorder="0"
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-      allowFullScreen
-  ></iframe>
-</Frame>
+## Quick Start: Launch in Minutes
 
-## What is Spotflow?
-
-Welcome to Spotflow, your comprehensive solution for managing all aspects of global payment processing. We are a Merchant of Record handling end to end global payments for digital products. Whether you're selling one-time payment products or offering subscription products, Spotflow provides a seamless platform to help you handle manage products, handle transactions and ensure compliance—all from one easy-to-use dashboard.
-
-## Quick Start
-
-Want to get started off using Spotflow right away ? Our guide below will take you through the most essential steps to get started.
+Want to get started off using Spotflow right away? Follow these essential steps to go from zero to payment processing:
 
 ### Follow these steps
 
 <AccordionGroup>
-  <Accordion title="Step 1 : Login to your account">
+  <Accordion title="Step 1 : Login to your account or Sign up">
     Log in using your email and password, or sign in with Google. If you don't have an account yet, you can create one at [https://app.spotflow.co/signup](https://app.spotflow.co/signup).
 
   </Accordion>
 
-  <Accordion title="Step 2: Add Your First Product">
+  <Accordion title="Step 2: Complete KYB Verification">
     **How It Works**
 
-    The step by step guides below will help you understand how to add One Time Payment products and Subscription products
+   This critical, compliance-driven step confirms your identity and the legitimacy of your business with legal and regulatory standards. You must complete this to unlock full platform access, including processing and payouts.
 
-    <Card title="Add One Time Payment Product" horizontal icon="box" href="/features/one-time-payment-products">Process to add a one-time payment product</Card>
+    <Card title="Business Verification" horizontal icon="box" href="https://app.spotflow.co/signup">Submit business registration documents for manual review and compliance clearance.</Card>
 
-    <Card title="Add Subscription Product" horizontal icon="repeat" href="/features/subscription">Process to add a subscription product</Card>
+    <Card title="For More Details" horizontal icon="repeat" href="/expert-desk/verification-process">Visit the KYB verification process page</Card>
 
   </Accordion>
 
 
-  <Accordion title="Step 3: Create a payment link">
+  <Accordion title="Step 3: Generate a payment link">
 
-    Follow these steps to create a payment link:
+    Generate a payment link right from your dashboard on either test or live mode, OR, try a live transaction at [Spotflow Demo](https://www.spotflow.one/demo) to see it in action.
 
     <Frame>
       <iframe 
           className="w-full aspect-video rounded-md" 
-          src="https://www.youtube.com/embed/OwMjs"
-          title="Setup Your Account | Spotflow Payments"
-          frameBorder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowFullScreen
+          src="https://www.youtube.com/embed/99m8iTjoQJw?si=5se_Wag5gEyLtZAM" 
+          title="Create Payment Link | Spotflow" 
+          frameborder="0" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+          referrerpolicy="strict-origin-when-cross-origin"
+           allowfullscreen
       ></iframe>
     </Frame>
-  </Accordion>
-
-  <Accordion title="Step 4 : Identity Verification and Business Verification">
-    **Overview**
-
-    The **Identity Verification** and **Business Verification** processes are critical steps for ensuring compliance with legal and regulatory standards. These verifications confirm the identity of the merchant and the legitimacy of their business. Merchants must complete both steps to unlock full access to the  Spotflow platform, including payment processing and payouts.
-
-    * **Identity Verification**: Verifies the individual managing the merchant account by requiring personal identification documents.
-
-    * **Business Verification**: Confirms the legitimacy of the business entity, requiring submission of business registration and related documents.
-
-    **Key Highlights**
-
-    1. **Secure Document Submission**
-       Merchants can securely submit personal and business documents, which are reviewed manually for compliance.
-
-    2. **Multiple Businesses**
-       Merchants can add and verify multiple businesses under a single account, allowing seamless switching between verified businesses.
-
-    For More details about the Verification process visit [verification process page](/miscellaneous/verification-process)
-  </Accordion>
-
-  <Accordion title="Step 5: Payout Setup">
-    **How It Works**
-
-    The step by step guides below will help you understand the process of linking your bank account and completing payout compliances
-
-    <Card title="Link your bank account" horizontal icon="building-columns" href="features/payouts/link-bank-account">Process to link your bank account</Card>
-
-    <Card title="Payout Compliance" horizontal icon="files" href="/features/payouts/compliance">Process to complete payout compliance</Card>
   </Accordion>
 </AccordionGroup>
 
 ## Developer Integration
 
 <Card title="Developer Integration" icon="code" href="/developer-resources/introduction">
-  Get started with technical integration. Explore comprehensive guides on integrating our APIs with your system.
+  Get started with technical integration. Explore detailed guides on integrating our APIs with your system.
 </Card>
